--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
     implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.4')
 
-    api 'com.lucendar.common:db-common:1.0.5'
+    api 'com.lucendar.common:db-common:1.0.6'
 
 //    api 'org.postgresql:postgresql:42.2.25'
     api 'org.postgresql:postgresql:42.3.8'
@@ -33,16 +33,14 @@ test {
 
 task sourceJar(type: Jar) {
     from sourceSets.main.allSource
+    archiveClassifier = 'sources'
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
             from components.java
-
-            artifact sourceJar {
-                classifier "sources"
-            }
+            artifact sourceJar
         }
     }
 }
