--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.lucendar.common'
-version '1.0.6-SNAPSHOT'
+version '1.1.0-SNAPSHOT'
 
 repositories {
     mavenLocal()
@@ -16,12 +16,12 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
-    implementation('org.scala-lang:scala-library:2.13.10')
-    implementation('org.scala-lang:scala-reflect:2.13.10')
+    implementation('org.scala-lang:scala-library:2.13.12')
+    implementation('org.scala-lang:scala-reflect:2.13.12')
 
-    implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.4')
+    implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.5')
 
-    api 'com.lucendar.common:db-common:1.0.6'
+    api 'com.lucendar.common:db-common:1.1.0-SNAPSHOT'
 
 //    api 'org.postgresql:postgresql:42.2.25'
     api 'org.postgresql:postgresql:42.3.8'
