--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'maven-publish'
 }
 
-group 'com.lucendar.common'
-version '1.1.0-SNAPSHOT'
+group 'com.lucendar'
+version '2.0.0-SNAPSHOT'
 
 repositories {
     mavenLocal()
@@ -21,10 +21,9 @@ dependencies {
 
     implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.5')
 
-    api 'com.lucendar.common:db-common:1.1.0-SNAPSHOT'
+    api 'com.lucendar:db-common:2.0.0-SNAPSHOT'
 
-//    api 'org.postgresql:postgresql:42.2.25'
-    api 'org.postgresql:postgresql:42.3.8'
+    api 'org.postgresql:postgresql:42.5.4'
 }
 
 test {
