--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.lucendar'
-version '2.0.0'
+version '2.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -21,7 +21,7 @@ dependencies {
 
     implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.5')
 
-    api 'com.lucendar:db-common:2.0.0'
+    api 'com.lucendar:db-common:2.1.0-SNAPSHOT'
 
     api 'org.postgresql:postgresql:42.5.4'
 }
