--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ plugins {
 group 'com.lucendar'
 version '2.1.0-SNAPSHOT'
 
+compileJava.options.encoding = 'UTF-8'
+compileScala.options.encoding = 'UTF-8'
+
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
+
 repositories {
     mavenCentral()
 }
@@ -23,7 +30,7 @@ dependencies {
 
     api 'com.lucendar:db-common:2.1.0-SNAPSHOT'
 
-    api 'org.postgresql:postgresql:42.5.4'
+    api 'org.postgresql:postgresql:42.7.2'
 }
 
 test {
