--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.lucendar'
-version '2.1.0-SNAPSHOT'
+version '2.1.0'
 
 compileJava.options.encoding = 'UTF-8'
 compileScala.options.encoding = 'UTF-8'
@@ -28,7 +28,7 @@ dependencies {
 
     implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.5')
 
-    api 'com.lucendar:db-common:2.1.0-SNAPSHOT'
+    api 'com.lucendar:db-common:2.1.0'
 
     api 'org.postgresql:postgresql:42.7.2'
 }
